# auth-center

./: .gitignore
auth-backend/: .env.example  .gitignore  Cargo.toml  docker-compose.yml  restclient.http
auth-backend/docs/: jwt设计.md  数据库迁移.md
auth-backend/migrations/: 20251018081202_create_users_table.sql  20251108010407_add_user_fields.sql
auth-backend/src/: handlers.rs  main.rs  models.rs  repositories.rs  utils.rs
auth-frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
auth-frontend/docs/: tailwind.md
auth-frontend/src/: App.svelte  style.css
auth-frontend/src/api/: login.ts
auth-frontend/src/pages/: Home.svelte  Login.svelte
