[package]
name = "auth-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.17"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "postgres",
  "chrono",
  "uuid",
] }
dotenvy = "0.15"
async-trait = "0.1"
anyhow = "1"
actix-cors = "0.7"
